remove third-task css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <section class="lines">
+        <div class="line one"></div>
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
@@ -19,9 +20,8 @@
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
+        <div class="line one "></div>
+        <div class="line one"></div>
     </section>
     <section class="benefits__wrapper">
         <div class="benefits__heading-wrapper">
